2008-11-07  Esteban Sanchez  <estebans@artica.es>

	* sql_error_handler: Added sql_error_handler() to hable SQL errors on
	process_sql. Improve SQL error handling in process_sql().

2008-11-07  Esteban Sanchez  <estebans@artica.es>

	* operation/users/user_edit.php: Fixed an error when updating the user
	which was not showing the updated fields, but the old ones.

2008-11-07  Esteban Sanchez  <estebans@artica.es>

	* operation/incidents/incident_files.php,
	operation/kb/browse_data.php, operation/kb/manage_data.php,
	operation/projects/task_files.php: Encode files URL characters to
	allow special characters in filenames. It was causing 404 errors if
	the filename has characters like #@=.

	* operation/incidents/incident_search.php: Ignore closed incident
	without valid date in statistics.

2008-11-06  Sancho Lerena <slerena@artica.es>

	* include/functions_form.php: Added blank space. Incident_details_list 
	now reports human time not mysql timestamp.

	* include/functions_calendar.php: With invalid dates (0000-00-00) 
	render to never.

	* include/functions_db.php: mail_incident() now also includes
	group name in incident information.

	* operation/incidents/incident.php: Header resolution and started
	has now a <br>.

	* operation/projects/project.php: Funny SQL/Logic bug fixed :-) 

	* operation/inventories/manage_prod.php: Missing " char.

2008-11-06  Esteban Sanchez  <estebans@artica.es>

	* operation/users/user_search.php: Implemented user search by string,
	it was missing in the code but appears in the interface.

2008-11-06  Esteban Sanchez  <estebans@artica.es>

	* operation/incidents/incident_detail.php: Added jQuery datepicker
	files when the page is loaded without AJAX. It was causing a failure
	when searching parent incident.

2008-11-06  Esteban Sanchez  <estebans@artica.es>

	* include/functions_form.php: Removed wordwrap on show_workunit_data()
	since it was not showing properly in some cases.

2008-11-06  Esteban Sanchez  <estebans@artica.es>
