@@ -1,5 +1,14 @@
 2008-11-07  Esteban Sanchez  <estebans@artica.es>
 
+	* operation/incidents/incident.php: Default search now only show new
+	incidents.
+
+	* include/functions_db.php: Fixed an error in incident_tracking that
+	cause not showing user name and a PHP notice. Show nothing on
+	sql_error_handler() based on error_reporting() level.
+
+2008-11-07  Esteban Sanchez  <estebans@artica.es>
+
 	* sql_error_handler: Added sql_error_handler() to hable SQL errors on
 	process_sql. Improve SQL error handling in process_sql().
 
